sample/error/e02006.asn
E02006 DEFINITIONS ::=
BEGIN
    realval REAL ::= -0 -- E02006
END
